# LC-clibs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.c
dybuf/: README.md  dybuf.h  dypkt.h
mmo/: GUIDES.md  README.md  mmo.h  mmo_ext.h  mmo_pack.c  mmo_pack.h  mmo_unittest.c  mmo_unittest.h
platform/: README.md  mmObj.h  mmObj_lib.h  mmObj_unittest.c  mmObj_unittest.h  mm_obj.h  mmo.h  mmo_ext.h  mmo_pack.c  mmo_pack.h  mmo_unittest.c  mmo_unittest.h  obj_pkt.h  plat_io.h  plat_mem.h  plat_mgn_mem.h  plat_string.h  plat_type.h  uthash.h
